# Update export ExportTs TuyenThang

--- a/Areas/Admin/Views/DangKyXetTuyens/DkxtTt.cshtml
+++ b/Areas/Admin/Views/DangKyXetTuyens/DkxtTt.cshtml
@@ -87,7 +87,7 @@
                         <div class="d-inline-flex flex-nowrap align-items-center">
                             <button class="btn btn-outline-primary bd-rd " id="bt_search" style="margin-right:4px">Lọc</button>
                             <a class="btn btn-outline-secondary bd-rd  " id="bt_reset" href="@Url.Action("Dkdttnk", "DangKyXetTuyens")" style="padding-right: 6px; padding-left: 6px; margin-right:4px">Tải lại</a>
-                            <a class="btn btn-outline-primary bd-rd  " id="bt_export" href="#" style="padding-right:6px; padding-left:6px">Xuất excel</a>
+                            <a class="btn btn-outline-primary bd-rd" id="bt_export" href="@Url.Action("ExportTsTuyenThang", "ExportDatas")" style="padding-right:6px; padding-left:6px">Xuất excel</a>
                         </div>
                     </div>
                     <hr class="mt-3 mb-2" />
