--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -115,9 +115,12 @@
     .letterspacing {
         letter-spacing: -1.2px;
     }
+    .form-control {
+        border-radius: 3px
+    }
     .login-button {
         padding: 8px 18px;
-        border-radius: 7px !important;
+        border-radius: 3px !important;
         background-color: #ff6a00;
         border: none;
         color: #fff;
