--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -112,7 +112,8 @@
                                 <a class="nav-link style_wspacing" href="@Url.Action("DkxtKQTthpt", "DangKyXetTuyens")">Sử dụng KQ thi TN THPT</a>
                                 <a class="nav-link style_wspacing" href="@Url.Action("DkxtHocBa", "DangKyXetTuyens")">Sử dụng KQ học bạ THPT</a>
                                 <a class="nav-link style_wspacing" href="@Url.Action("DkxtTt", "DangKyXetTuyens")">Tuyển thẳng theo QĐ</a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqDgnl", "DangKyXetTuyenKhac")">SD KQ thi đánh giá năng lực hoặc chứng chỉ ngoại ngữ</a>                               
+                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqDgnl", "DangKyXetTuyens")">SD KQ thi đánh giá năng lực hoặc đánh giá tư duy</a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("DkxtkqCcnn", "DangKyXetTuyens")">SD chứng chỉ ngoại ngữ</a>
                             </nav>
                         </div>
                         <a class="nav-link" href="@Url.Action("Dkdttnk", "DangKyXetTuyens")">
