#update site admin

--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -161,6 +161,10 @@
                                 <a class="nav-link" href="@Url.Action("LcTrunghocCs", "TruongLienCaps")">Dự tuyển THCS</a>
                             </nav>
                         </div>
+                        <a class="nav-link "href="@Url.Action("Index", "AdminAccounts")">
+                            <div class="nav-link-icon"><i data-feather="user"></i></div>
+                            Quản lý tài khoản
+                        </a>
                         <a class="nav-link " href="#">
                             <div class="nav-link-icon"><i data-feather="globe"></i></div>
                             Hướng dẫn sử dụng
